@@ -20,26 +20,27 @@ import io.polaris.core.PolarisDiagnostics;
 import io.polaris.core.entity.PolarisBaseEntity;
 import io.polaris.core.entity.PolarisGrantRecord;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.jetbrains.annotations.NotNull;
 
 /** An entry in our entity cache. Note, this is fully immutable */
 public class EntityCacheEntry {
 
   // epoch time (ns) when the cache entry was added to the cache
-  private long createdOnNanoTimestamp;
+  private final long createdOnNanoTimestamp;
 
   // epoch time (ns) when the cache entry was added to the cache
   private long lastAccessedNanoTimestamp;
 
   // the entity which have been cached.
-  private PolarisBaseEntity entity;
+  private final PolarisBaseEntity entity;
 
   // grants associated to this entity, for a principal, a principal role, or a catalog role these
   // are role usage
   // grants on that entity. For a catalog securable (i.e. a catalog, namespace, or table_like
   // securable), these are
   // the grants on this securable.
-  private List<PolarisGrantRecord> grantRecords;
+  private final List<PolarisGrantRecord> grantRecords;
 
   /**
    * Constructor used when an entry is initially created after loading the entity and its grants
@@ -108,13 +109,15 @@ public class EntityCacheEntry {
   }
 
   public @NotNull List<PolarisGrantRecord> getGrantRecordsAsGrantee() {
-    return grantRecords.stream().filter(record -> record.getGranteeId() == entity.getId()).toList();
+    return grantRecords.stream()
+        .filter(record -> record.getGranteeId() == entity.getId())
+        .collect(Collectors.toList());
   }
 
   public @NotNull List<PolarisGrantRecord> getGrantRecordsAsSecurable() {
     return grantRecords.stream()
         .filter(record -> record.getSecurableId() == entity.getId())
-        .toList();
+        .collect(Collectors.toList());
   }
 
   public void updateLastAccess() {
